Feat: init header

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -8,14 +8,14 @@
         </div>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 link-secondary">Accueil</a></li>
+            <li><a href="/accueil" class="nav-link px-2 link-secondary">Accueil</a></li>
             <li><a href="#" class="nav-link px-2">La carte</a></li>
             <li><a href="#" class="nav-link px-2">Menu gastronomique</a></li>
             <li><a href="#" class="nav-link px-2">Réserver</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Login</button>
+            <button onclick="location.href='/login'" type="button" class="btn btn-outline-primary me-2">Login</button>
             <button type="button" class="btn btn-primary">S'inscrire</button>
         </div>
     </header>
