--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,20 +1,35 @@
 
-<div class="container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <div class="col-md-3 mb-2 mb-md-0">
+<div class="container-fluid">
+    <header class="d-flex align-items-center justify-content-center justify-content-md-between mt-3">
+        <div class="col-1 m-2 mb-md-0">
             <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+                <img class="bi" width="80" height="80" role="img" src="{{ asset('images/assets/ECF_Resto-logo.png') }}" alt="Logo">
+                <!-- <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg> -->
             </a>
         </div>
 
+        <div class="col-9 text-center">
+            <h1 class="d-inline-block">Le Quai Antique</h1>
+        </div>
+
+        <div class="input-group mb-3 end">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Navigation</button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/accueil">Accueil</a></li>
+                <li><a class="dropdown-item" href="#">La carte</a></li>
+                <li><a class="dropdown-item" href="#">Menu gastronomique</a></li>
+            </ul>
+        </div>
+
+<!--
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/accueil" class="nav-link px-2 link-secondary">Accueil</a></li>
             <li><a href="#" class="nav-link px-2">La carte</a></li>
             <li><a href="#" class="nav-link px-2">Menu gastronomique</a></li>
             <li><a href="#" class="nav-link px-2">Réserver</a></li>
         </ul>
-
-        <div class="col-md-3 text-end">
+-->
+        <div class="d-none d-lg-flex col-md-3 text-end">
             <button onclick="location.href='/login'" type="button" class="btn btn-outline-primary me-2">Login</button>
             <button type="button" class="btn btn-primary">S'inscrire</button>
         </div>
