--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,17 +5,21 @@
 {% block body %}
 
 <div class="container-fluid">
-    <div class="d-block mx-5">
+    <div class="d-block mx-5 p-lg-3">
         <h2 class="text-center">Bienvenue au Quai antique</h2>
     </div>
-    <div class="d-block d-lg-flex">
-        <div class="text-center" ><img class="col-11" src="{{ asset('images/assets/ECF_Resto_vue_mer.png') }}" alt="image du restaurant"></div>
-        <div class="mx-5">
+    <div class="d-block d-lg-flex justify-content-lg-around">
+        <div>
+            <div class="text-center" ><img class="col-11 col-lg-10 mx-lg-2" src="{{ asset('images/assets/ECF_Resto_vue_mer.png') }}" alt="image du restaurant"></div>
+            <div class="mx-5">
             <p class="text-center m-1">Le Quai Antique s'inscrit dans la tradition culinaire régionale française en épousant les senteurs de nos contrées lointaines et en s'ouvrant aux saveurs et délicatesses d'ailleurs.</p>
         </div>
-        <div class="text-center"><img class="col-11" src="{{ asset('images/assets/ECF-Cave.jpeg') }}" alt="image cave à vin"></div>
-        <div class="mx-5">
+        </div>
+        <div>
+            <div class="text-center"><img class="col-11 col-lg-12 mx-lg-2" src="{{ asset('images/assets/ECF-Cave.jpeg') }}" alt="image cave à vin"></div>
+            <div class="mx-5">
             <p class="text-center m-1" >Nous avons cumulé avec le temps les vins les plus fins du terroir français. Nos caves sont enrichies des grands crus issus des plus grands vignobles nationaux et du monde.</p>
+        </div>
         </div>
     </div>
 
