--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container footer">
     <footer class="d-flex justify-content-between align-items-center py-3 my-4 border-top">
 
         <div class="col-md-6 d-block align-items-center">
