--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,17 +9,17 @@
         <h2 class="text-center">Bienvenue au Quai antique</h2>
     </div>
     <div class="d-block d-lg-flex justify-content-lg-around">
-        <div>
-            <div class="text-center" ><img class="col-11 col-lg-10 mx-lg-2" src="{{ asset('/images/assets/ECF_Resto_vue-mer-1.jpg') }}" alt="image du restaurant"></div>
-            <div class="mx-5">
-            <p class="text-center m-1">Le Quai Antique s'inscrit dans la tradition culinaire régionale française en épousant les senteurs de nos contrées lointaines et en s'ouvrant aux saveurs et délicatesses d'ailleurs.</p>
+        <div class="col col-lg-6">
+            <div class="text-center" ><img class="col-11 col-lg-11 mx-lg-2" src="{{ asset('/images/assets/ECF_Resto_vue-mer-1.jpg') }}" alt="image du restaurant"></div>
+            <div class="col-11 col-lg-11 mx-5">
+                <p class="text-center m-1">Le Quai Antique s'inscrit dans la tradition culinaire régionale française en épousant les senteurs de nos contrées lointaines et en s'ouvrant aux saveurs et délicatesses d'ailleurs.</p>
+            </div>
         </div>
-        </div>
-        <div>
-            <div class="text-center"><img class="col-11 col-lg-12 mx-lg-2" src="{{ asset('images/assets/ECF-Cave.jpeg') }}" alt="image cave à vin"></div>
-            <div class="mx-5">
-            <p class="text-center m-1" >Nous avons cumulé avec le temps les vins les plus fins du terroir français. Nos caves sont enrichies des grands crus issus des plus grands vignobles nationaux et du monde.</p>
-        </div>
+        <div class="col col-lg-6">
+            <div class="text-center"><img class="col-11 col-lg-11 mx-lg-2" src="{{ asset('images/assets/ECF-Cave.jpeg') }}" alt="image cave à vin"></div>
+            <div class="col-11 col-lg-11 mx-5">
+                <p class="text-center m-1" >Nous avons cumulé avec le temps les vins les plus fins du terroir français. Nos caves sont enrichies des grands crus issus des plus grands vignobles nationaux et du monde.</p>
+            </div>
         </div>
     </div>
 
