Feat: reservation controller

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -15,7 +15,8 @@
             <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
         </ul>
 
-        <button class="btn btn-primary btn-lg" onclick="location.href='/'" type="button" >Réserver</button>
+        <button class="btn btn-primary btn-lg" onclick="location.href='/reservation'" type="button" >Réserver</button>
+
     </footer>
     <div class="col-12 d-inline-block text-center align-items-center">
         <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
