--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -11,10 +11,8 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/sergionunez/work-space/PHP_cours/ecf_restaurant_symfony/src/Controller/ReservationController.php'|file_link(0) }}">src/Controller/ReservationController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/sergionunez/work-space/PHP_cours/ecf_restaurant_symfony/templates/reservation/index.html.twig'|file_link(0) }}">templates/reservation/index.html.twig</a></code></li>
-    </ul>
+    {{ form(form) }}
+
+
 </div>
 {% endblock %}
