--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -9,10 +9,9 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1 class="mb-4">Réservation</h1>
 
     {{ form(form) }}
-
 
 </div>
 {% endblock %}
