Feat: display timeslices by selected service

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,11 +9,6 @@ body {
     margin-top: auto;
 }
 
-.toto {
+#allergies_list, #reservation_meal_time option {
     display: none;
 }
-
-/*
-#reservation_meal_time option {
-    display: none;
-}*/
